test/corpus/liquid.txt
==================
Liquid Tag with If
==================

<html>
  {% liquid
    include "file"
    assign product_type = product.type | downcase

    if product_type != blank
      product_type | trim
      echo product_type
    else
      assign product_type = "type"
    endif
  %}
</html>

---
(template
 (content)
 (directive
  (liquid_tag
   (statement
    (include
     (string)))
   (statement
    (assignment
     variable_name: (identifier)
     value: (expression
      (filter
       body: (expression
        (access
         receiver: (identifier)
         method: (identifier)))
       name: (identifier)))))
   (if_statement
    condition: (expression
     (predicate
      left: (expression
       (identifier))
      right: (expression
       (identifier))))
    consequence: (block
     (expression
      (filter
       body: (expression
        (identifier))
       name: (identifier)))
     (statement
      (echo
       (expression
        (identifier)))))
    alternative: (else_statement
     (block
      (statement
       (assignment
        variable_name: (identifier)
        value: (expression
         (string)))))))))
  (content))

==================
Liquid Tag with Case
==================

<html>
  {% liquid

    assign product_type = product.type | downcase
    assign message = ''

    case product_type
      when 'health'
        assign message = 'This is a health potion!'
        echo message | trim
      when 'love'
        assign message = 'This is a love potion!'
      else
        render "page"
        product_type | json
    endcase

    echo message
  %}
</html>

---
  (template
   (content)
   (directive
    (liquid_tag

     (statement
      (assignment
       variable_name: (identifier)
       value: (expression
        (filter
         body: (expression
          (access
           receiver: (identifier)
           method: (identifier)))
         name: (identifier)))))

     (statement
      (assignment
       variable_name: (identifier)
       value: (expression
        (string))))

     (case_statment
      receiver: (identifier)
      conditions: (block
       (when_statement
        condition: (expression
         (string))
        consequence: (block
         (statement
          (assignment
           variable_name: (identifier)
           value: (expression
            (string))))
         (statement
          (echo
           (expression
            (filter
             body: (expression
              (identifier))
             name: (identifier)))))))
       (when_statement
        condition: (expression
         (string))
        consequence: (block
         (statement
          (assignment
           variable_name: (identifier)
           value: (expression
            (string)))))))
      alternative: (else_statement
       (block
        (statement
         (render
          file: (string)))
        (expression
         (filter
          body: (expression
           (identifier))
          name: (identifier))))))

  (statement
   (echo
    (expression
     (identifier))))))
(content))

==================
Liquid Tag with For Loop
==================

<html>
  {% liquid
    for product_type in product.types
      assign data = product_type
      cycle "group": "one", string, access.string
      echo data
    endfor
  %}
</html>

---
  (template
   (content)
   (directive
    (liquid_tag
     (for_loop_statement
      item: (identifier)
      iterator: (access
        receiver: (identifier)
        method: (identifier))
      body: (block
        (statement
         (assignment
          variable_name: (identifier)
          value: (expression
            (identifier))))
        (cycle
         group_name: (string)
         group_item: (string)
         group_item: (identifier)
         group_item: (access
           receiver: (identifier)
           method: (identifier)))
        (statement
         (echo
          (expression
           (identifier))))))))
(content))

==================
Liquid Tag with Capture
==================

<html>
  {% liquid
    capture title
      if show_up_title
         up_title
      else
        down_title
      endif
    endcapture
  %}
</html>

---
(template
 (content)
 (directive
  (liquid_tag
   (capture_statement
    variable: (identifier)
    value: (block
       (if_statement
        condition: (expression
          (identifier))
        consequence: (block
           (expression
            (identifier)))
        alternative: (else_statement
          (block
            (expression
             (identifier)))))))))
  (content))

==================
Liquid Tag with Tablerow
==================

<html>
  {% liquid
    tablerow product_type in product.types
      assign data = product_type
      echo data
    endtablerow
  %}
</html>

---
  (template
    (content)
    (directive
      (liquid_tag
        (tablerow_statement
          item: (identifier)
          iterator: (access
            receiver: (identifier)
            method: (identifier))
          body: (block
           (statement
            (assignment
             variable_name: (identifier)
             value: (expression
              (identifier))))
           (statement
            (echo
             (expression
              (identifier))))))))
    (content))
